Scroll til om-os

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
             I samarbejde med Den Danske Naturfond kan du nu leje en stand til Loppemarkedernes Dag i nærheden af dig.
             Tilmeld dig nu, saml dine ting, og lad os sammen skabe en bedre fremtid for vores miljø.
         </p>
+        <a href="#omos-scroll">
         <button class="cta1">
-            Lej Stand
+            Om os
         </button>
+    </a>
     </figure>
 </section>
 
@@ -46,8 +48,8 @@
 <!-- Hvad er det sektion -->
 <section class="midtersektion">
     <figure class="hvaderdet-figure">
-    <h2>
-        Hvad er det?
+    <h2 id="omos-scroll">
+        OM OS
     </h2>
     <p>
         Loppemarkedernesdag er en årlig begivenhed, hvor der afholdes loppemarkeder i alle Danmarks storbyer. 
