--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Burger menu laves til i javascript af Freya -->
     <nav class="burger-menu">
-    <label class="menu-ikon" for="menu-toggle">MENU ☰</label>
+    <label class="menu-ikon" for="menu-toggle"> ☰</label>
     </nav>
 </header>
 
