--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <section class="find-stand-sektion">
     <figure class="findstand-figure">
         <h2>
-            Find en stand nær dig
+            Find en  nær dig
         </h2>
         <button class="cta4">
             Lej stand
