--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         FAQ
     </h2>
     <ul class="faqul">
-        <li>Hvad er inkluderet i en stand?</li>
+        <li>Hvad er inkluderet i en ?</li>
         <li>Hvor og hvornår kan jeg tjekke ind?</li>
         <li>Hvad skal jeg medbringe?</li>
         <li>Hvordan finder jeg min stand på Loppemarkedet?</li>
