--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
 <dialog class="modeloverlay" id="byModel">
     <dialog class="modelindhold">
     <h3 class="overlayoverskrift">Vælg by</h3>
+    <p>steder i landet afholdes Loppemarkedernesdag</p>
+    <p>lørdag d. 20 maj</p>
+    <p>kl 09:00-17:00 </p>
     <select class="info-form">
         <option value="kobenhavn">København</option> <!-- Laves om til javascript af simon -->
         <option value="aarhus">Århus</option>
@@ -211,7 +214,6 @@
         <option value="aalborg">Aalborg</option>
         <option value="svendborg">Svendborg</option>
     </select>
-    <p>sådan er du med</p>
     <button class="cta-knap model-cta-knap" data-action="skift-til-infoModel">Videre</button>
     </dialog>
     </dialog>
