--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="desktop-menu">
                 <li><a href="#">OM OS</a></li>
                 <li><a href="#">LEJ STAND</a></li>
-                <li><a href="#">LOKATIONER</a></li>
+                <li><a href="lokationer.html">LOKATIONER</a></li>
                 <li><a href="#">KONTAKT OS</a></li>
         </ul>
         <nav class="footer-menu">
