--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
    </figure>
 </section>
 
-<!-- Faq sektion -->
+<!-- FAQ sektion -->
 <section class="faq-container">
-    <h2 class="faq-heading">FAQ'S</h2>
+    <h2 class="faq-heading">FAQ</h2>
         <figure class="faq-page">Hvad er inkluderet i en stand?</figure>
         <figure class="faq-body">
             <p>En stand svarer til 4,5 kvm. Dette er opridset ude på pladsen. 
