--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
    </figure>
 </section>
 
-<!-- Faq sektion -->
-<h2 class="faq-heading">FAQ'S</h2>
+<!-- FAQ sektion -->
 <section class="faq-container">
+    <h2 class="faq-heading">FAQ</h2>
         <figure class="faq-page">Hvad er inkluderet i en stand?</figure>
         <figure class="faq-body">
             <p>En stand svarer til 4,5 kvm. Dette er opridset ude på pladsen. 
@@ -192,7 +192,7 @@
         </figure>
         <figure class="faq-page">Hvor kan jeg læse om de enkelte steder det afholdes?</figure>
         <figure class="faq-body">
-            <p>Der kan læses om de enkelte lokationer om loppemarkeder her.</p>
+            <p>Der kan læses om de enkelte lokationer om loppemarkeder <a href="lokationer.html">her</a>.</p>
         </figure>
         <figure class="faq-page">Jeg har ikke modtaget kvittering for mit stand-køb?</figure>
         <figure class="faq-body">
