desktop menu hover fixet.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <figure class="logo">
-            <img class="logoimg" src="assets/images/logo.png" alt="Logo">
+            <a href="index.html"><img class="logoimg" src="assets/images/logo.png" alt="Logo"></a>
         </figure>
         <ul class="desktop-menu">
                 <li><a href="#omos-scroll">OM OS</a></li>
