--- a/lokationer.html
+++ b/lokationer.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <figure class="logo">
-            <img class="logoimg" src="assets/images/logo.png" alt="Logo">
+            <a href="index.html"><img class="logoimg" src="assets/images/logo.png" alt="Logo"></a>
         </figure>
         <ul class="desktop-menu">
                 <li><a href="#">OM OS</a></li>
@@ -158,8 +158,7 @@
     <p><a class="politikker" href="#">Privatlivspolitik</a> // <a class="politikker" href="#">Cookiepolitik</a></p>
 </footer>
 <script src="assets/js/scrolltop.js"></script>
-<script src="assets/js/freya.js"></script>
-<script src="assets/js/overlay.js"></script>
+
 <button id="scrollTopBtn" onclick="scrollToTop()">↑</button>
 </body>
 </html>
