--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <h1 class="banneroverskrift">
             Lørdag d. 20 maj
         </h1>
+        <p>kl. 9-17</p>
         <p class="bannertekst">
             Slå et slag for miljøet og vores smukke natur! 
             I samarbejde med Den Danske Naturfond kan du nu leje en stand til Loppemarkedernes Dag i nærheden af dig.
@@ -229,6 +230,11 @@
     <p>kontakt@naturfonden.dk</p>
     <p>71 99 72 01</p>
     <p>CVR-nr. 36 50 29 91</p>
+    <figure class="socialikoner">
+        <img src="assets/images/Ikoner/instagram.png">
+        <img src="assets/images/Ikoner/tiktok.png">
+        <img src="assets/images/Ikoner/facebook.png">
+    </figure>
 </section>
 </main>
 
@@ -295,12 +301,14 @@
     <!-- Third Modal Overlay for "Betalings oplysninger" -->
     <dialog class="modeloverlay" id="afslutModel">
         <dialog class="modelindhold">
-        <h3 class="overlayoverskrift">Tillykke</h3>
+        <h3 class="overlayoverskrift">FULDFØRT</h3>
         <img class="proces" src="assets/images/proces4.PNG">
-        <p>Din bod er successfuldt bestilt</p>
-        <p>i Odense C D. 20 Maj</p>
-        <p>Du vil modtage en Email med</p>
-        <p>bekræftelsen</p>
+        <img class="successimg" src="assets/images/Ikoner/success.svg">
+        <h3 class="overlayoverskrift">Tillykke</h3>
+        <p class="successtekst">Din bod er successfuldt bestilt</p>
+        <p class="successtekst">i Odense C D. 20 Maj</p>
+        <p class="successtekst">Du vil modtage en Email med</p>
+        <p class="successtekst">bekræftelsen</p>
         <button class="cta-knap model-cta-knap" data-action="afslut">Afslut</button>
         </dialog>
         </dialog>
