--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 style="top: 63%; left: 38%;">
             </li>
         </ul>
-        <!-- tekstbokse -->
+        <!-- tekst -->
         <div id="overlayx" style="display:none;">
             <p id="overlayx-text"></p>
         </div>
