--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 <script src="assets/js/scrolltop.js"></script>
 <script src="assets/js/freya.js"></script>
 <script src="assets/js/sofie.js"></script>
-<script src="assets/js/overlay.js"></script>
-<script src="assets/js/kort.js"></script>
+<script src="assets/js/albert.js"></script>
+<script src="assets/js/simon.js"></script>
 
 <button id="scrollTopBtn" onclick="scrollToTop()">↑</button>
 </body>
