click på pins fixet

--- a/index.html
+++ b/index.html
@@ -134,28 +134,28 @@
             <li class="nål" id="nål-1" style="top: 74%; left: 47%;" onclick="location.href='lokationer.html#odensehavn';">
             </li>
             <li class="nål" id="nål-2"
-                style="top: 66%; left: 73%;">
+                style="top: 66%; left: 73%;" onclick="location.href='lokationer.html#kbhraadhus';">
             </li>
             <li class="nål" id="nål-3"
-                style="top: 31.3%; left: 40%;">
+                style="top: 31.3%; left: 40%;" onclick="location.href='lokationer.html#aalborghavn';">
             </li>
             <li class="nål" id="nål-4"
-                style="top: 52%; left: 43%;">
+                style="top: 52%; left: 43%;" onclick="location.href='lokationer.html#ingerslevs';">
             </li>
             <li class="nål" id="nål-5"
-                style="top: 70%; left: 35%;">
+                style="top: 70%; left: 35%;" onclick="location.href='lokationer.html#ambolten';">
             </li>
             <li class="nål" id="nål-6"
-                style="top: 72%; left: 40%;">
+                style="top: 72%; left: 40%;" onclick="location.href='lokationer.html#underbroen';">
             </li>
             <li class="nål" id="nål-7" 
-                style="top: 66%; left: 68%;">
+                style="top: 66%; left: 68%;" onclick="location.href='lokationer.html#moellehusvej';">
             </li>
             <li class="nål" id="nål-8"
-                style="top: 79%; left: 52%;">
+                style="top: 79%; left: 52%;" onclick="location.href='lokationer.html#raadhusnyborg';">
             </li>
             <li class="nål" id="nål-9" 
-                style="top: 63%; left: 38%;">
+                style="top: 63%; left: 38%;" onclick="location.href='lokationer.html#vejleraadhus';">
             </li>
         </ul>
         <div id="overlayx" style="display:none;">
