--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             I samarbejde med Den Danske Naturfond kan du nu leje en stand til Loppemarkedernes Dag i nærheden af dig.
             Tilmeld dig nu, saml dine ting, og lad os sammen skabe en bedre fremtid for vores miljø.
         </p>
-        <a href="#omos-scroll">
-        <button class="cta1">
+        
+        <button class="cta1" onclick="location.href='#omos-scroll';">
             Om os
         </button>
-    </a>
+   
     </figure>
 </section>
 
