alt tags ændret på alle billeder.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 <!-- Hvad er det sektion -->
 <section class="midterbillede-sektion">
     <figure class="billede-figure">
-    <img class="midterbilled1" src="assets/images/floramarket.jpeg">
-    <img class="midterbilled2" src="assets/images/recycleearth.png">
-    <img class="midterbilled3" src="assets/images/markedevintage.jpeg">
+    <img class="midterbilled1" src="assets/images/floramarket.jpeg" alt="udendørs loppemarked">
+    <img class="midterbilled2" src="assets/images/recycleearth.png" alt="genbrugslogo rundt om jordkloden">
+    <img class="midterbilled3" src="assets/images/markedevintage.jpeg" alt="loppemarked">
     </figure>
 </section>
 
@@ -88,31 +88,31 @@
 </h2>
 <section class="erdumed">
     <figure class="erdumed1">
-        <img class="ikonererdumed" src="assets/images/Ikoner/Placering.png">
+        <img class="ikonererdumed" src="assets/images/Ikoner/Placering.png" alt="placerings ikon">
         <h3>FIND EN STAND NÆR DIG</h3>
         <p>Vælg det område i Danmark,</p>
         <p>som du ønsker at få en stand.</p>
     </figure>
     <figure class="erdumed2">
-        <img class="ikonererdumed" src="assets/images/Ikoner/Lejstand.png">
+        <img class="ikonererdumed" src="assets/images/Ikoner/Lejstand.png" alt="lej stand ikon">
         <h3>BOOK EN STAND</h3>
         <p>Tilmeld dig for 150 kr. går til</p>
         <p>Den Danske Naturfondt.</p>
     </figure>
     <figure class="erdumed3">
-        <img class="ikonererdumed" src="assets/images/Ikoner/Dinstand.png">
+        <img class="ikonererdumed" src="assets/images/Ikoner/Dinstand.png" alt="din stand ikon">
         <h3>SÆT DIN STAND OP</h3>
         <p>Medbring dine ejendele</p>
             <p>og pynt din bod op.</p>
     </figure>
     <figure class="erdumed4">
-        <img class="ikonererdumed" src="assets/images/Ikoner/Penge.png">
+        <img class="ikonererdumed" src="assets/images/Ikoner/Penge.png" alt="penge ikon">
         <h3>TJEN PENGE</h3>
         <p>100 % af pengene du tjener,</p>
             <p>går til dig selv.</p>
     </figure>
     <figure class="erdumed5">
-        <img class="ikonererdumed" src="assets/images/Ikoner/Highfive.png">
+        <img class="ikonererdumed" src="assets/images/Ikoner/Highfive.png" alt="high five ikon">
         <h3>WIN WIN!</h3>
         <p>Ved at deltage i Loppemarkedernes</p> 
         <p>dag, støtter du et godt formål og</p>
@@ -230,9 +230,9 @@
     <p>71 99 72 01</p>
     <p>CVR-nr. 36 50 29 91</p>
     <figure class="socialikoner">
-        <img src="assets/images/Ikoner/instagram.png">
-        <img src="assets/images/Ikoner/tiktok.png">
-        <img src="assets/images/Ikoner/facebook.png">
+        <img src="assets/images/Ikoner/instagram.png" alt="instagram ikon">
+        <img src="assets/images/Ikoner/tiktok.png" alt="tiktok ikon">
+        <img src="assets/images/Ikoner/facebook.png" alt="facebook ikon">
     </figure>
 </section>
 </main>
@@ -242,7 +242,7 @@
 <dialog class="modeloverlay" id="byModel">
     <dialog class="modelindhold">
     <h3 class="overlayoverskrift">Vælg by</h3>
-    <img class="proces" src="assets/images/proces1.PNG">
+    <img class="proces" src="assets/images/proces1.PNG" alt="en fjerde del">
 
     <p>steder i landet afholdes Loppemarkedernesdag</p>
     <p>lørdag d. 20 maj</p>
@@ -261,7 +261,7 @@
     <dialog class="modeloverlay" id="infoModel">
     <dialog class="modelindhold">
     <h3 class="overlayoverskrift">Personlige oplysninger</h3>
-    <img class="proces" src="assets/images/proces2.PNG">
+    <img class="proces" src="assets/images/proces2.PNG" alt="to fjerde dele">
 
     <form class="info-form">
     <input placeholder="Navn" required="" type="text"/>
@@ -280,7 +280,7 @@
     <dialog class="modeloverlay" id="betalingModel">
         <dialog class="modelindhold">
         <h3 class="overlayoverskrift">Betalings oplysninger</h3>
-        <img class="proces" src="assets/images/proces3.PNG">
+        <img class="proces" src="assets/images/proces3.PNG" alt="3 fjerde dele">
 
         <form class="info-form">
         <input placeholder="Kortnummer" required="" type="text"/>
@@ -292,7 +292,7 @@
         <input placeholder="Kortholders fulde navn" required="" type="tel"/>
         </form>
         <p>Betal med mobilepay:</p>
-        <img id="mobilepayImage" class="mobilepay" src="assets/images/mobilepay.png">
+        <img id="mobilepayImage" class="mobilepay" src="assets/images/mobilepay.png" alt="mobilepay billede">
         <button class="cta-knap model-cta-knap" data-action="skift-til-afslutModel">Betal</button>
         </dialog>
     </dialog>
@@ -301,8 +301,8 @@
     <dialog class="modeloverlay" id="afslutModel">
         <dialog class="modelindhold">
         <h3 class="overlayoverskrift">FULDFØRT</h3>
-        <img class="proces" src="assets/images/proces4.PNG">
-        <img class="successimg" src="assets/images/Ikoner/success.svg">
+        <img class="proces" src="assets/images/proces4.PNG" alt="fire fjerde dele">
+        <img class="successimg" src="assets/images/Ikoner/success.svg" alt="success logo">
         <h3 class="overlayoverskrift">Tillykke</h3>
         <p class="successtekst">Din bod er successfuldt bestilt</p>
         <p class="successtekst">i Odense C D. 20 Maj</p>
